# MessageSigner

./: CMakeLists.txt  README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/libzip/: CMakeLists.txt
src/main/cpp/msigner/: CMakeLists.txt  apikey_decoder.cpp  apikey_decoder.h  jni_log.h  messagesigner-lib.cpp  package_utils.cpp  package_utils.h  pkcs7.cpp  pkcs7.h  string_extra.cpp  string_extra.h  utils.cpp  utils.h
src/main/java/im/hch/mapikey/messagesigner/: HashUtils.java  MessageSigner.java
